Fix layout issues

--- a/client/src/pages/Layout/Layout.module.sass
+++ b/client/src/pages/Layout/Layout.module.sass
@@ -2,3 +2,8 @@
   display: flex
   flex-direction: column
   min-height: 100vh
+
+.content
+  display: flex
+  flex-direction: column
+  flex: 1 1 auto
